erDiagram

  %% Statusul comenzilor este gestionat prin FSM (Finite State Machine) în ComandaService
  COMANDA {
    UUID id
    UUID contract_id
    DATE data_emitere
    STRING numar_comanda
    STRING status
    STRING document_link
    TEXT observatii
  }

  %% Referință la produsul comercial existent în momentul plasării comenzii. Nu se creează duplicat.
  COMANDA_ITEM {
    UUID id
    UUID comanda_id
    UUID produs_comercial_id
    INTEGER cantitate
    FLOAT pret_unitar
    FLOAT valoare_totala
  }

  %% Statusul loturilor de ofertă este gestionat prin FSM în OfertaService
  LOT_OFERTA {
    UUID produs_comercial_id
    %% Fiecare LotOferta face referire la un produs comercial propus într-o ofertă pentru un lot de procedură.
    UUID lot_procedura_id
  }

  %% Legătura opțională cu ComandaItem permite trasabilitate completă între livrare și comanda inițială
  LIVRARE_ITEM {
    UUID comanda_item_id
  }

  COMANDA ||--o{ COMANDA_ITEM : conține
  COMANDA }o--|| CONTRACT : derivă_din
  LOT_OFERTA }o--|| LOT_PROCEDURA : acopera
  LIVRARE_ITEM }o--|| COMANDA_ITEM : derivat_din


  %% Înregistrează toate tranzițiile de status pentru trasabilitate și audit
  STATUS_LOG {
    UUID id
    STRING entitate
    UUID entitate_id
    STRING status_vechi
    STRING status_nou
    UUID utilizator_id
    DATETIME data_ora
    TEXT observatii
  }

  %% Relațiile către entități specifice sunt dinamice și gestionate prin câmpul `entitate`

  %% Serviciul DocumentService gestionează încărcarea, salvarea și accesarea documentelor atașate entităților
  %% Documentele sunt gestionate printr-un serviciu centralizat – DocumentService
  DOCUMENT {
    UUID id
    STRING denumire
    STRING tip_mediu       %% ex: 'local', 's3', 'gdrive'
    STRING cale_fisier     %% path local sau link extern
    STRING extensie
    UUID entitate_id       %% ID-ul entității asociate (ex: ofertă, contract)
    STRING entitate        %% Numele entității asociate
    UUID utilizator_id     %% Cine a încărcat documentul
    DATETIME data_incarcare
    TEXT observatii
  }